--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
   }
 </style>
 
-<script
-  async
-  src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"
-></script>
+<script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
 
 <script type="importmap">
   {
@@ -27,7 +24,7 @@
   const camera = new THREE.PerspectiveCamera(
     75,
     window.innerWidth / window.innerHeight,
-    0.1,
+    0.01,
     1000
   );
   camera.position.set(5, 4, 8);
@@ -186,12 +183,17 @@
         break;
       case "Space":
       case "ControlLeft":
+        if(stopped) return resetGame()
         keys.space.pressed = true
+        break;
+      case "Escape":
+        resetGame()
         break;
     }
   });
 
   window.addEventListener("keyup", (e) => {
+    console.log(e.code)
     switch (e.code) {
       case "KeyA":
       case "ArrowLeft":
@@ -213,8 +215,10 @@
   });
 
   const enemies = [];
+  let stopped = false
 
   const stopAnimation = (id) => {
+    stopped = true
     window.cancelAnimationFrame(id);
     const end = document.createElement("h1");
     const body = document.querySelector("body");
@@ -224,9 +228,29 @@
       "position: relative; margin: 0; display: flex; flex-direction: column; align-items: center; justify-content: center;";
     end.style = "position: absolute; color: white; cursor: pointer;";
     end.innerText = "Game Over";
-    end.onclick = () => window.location.reload();
+    end.onclick = () => resetGame()
     document.body.appendChild(end);
   };
+
+  const resetGame = () => {
+    window.location.reload();
+  }
+
+  const renderControls = () => {
+    const body = document.querySelector("body")
+    const controls = document.createElement('div')
+    const arrowUp = document.createElement('h4')
+    const arrowDown = document.createElement('h4')
+    const arrowLeft = document.createElement('h4')
+    const arrowRight = document.createElement('h4')
+
+    arrowUp.innerText = ''
+    arrowDown.innerText = ''
+    arrowLeft.innerText = ''
+    arrowRight.innerText = ''
+
+    
+  }
 
   let frame = 0;
   let spawnRate = 150;
@@ -244,7 +268,7 @@
     if (keys.w.pressed) cube.velocity.z = -0.05;
     else if (keys.s.pressed) cube.velocity.z = 0.05;
 
-    if(keys.space.pressed && cube.position.y < -1) cube.velocity.y = 0.08;
+    if (keys.space.pressed && cube.position.y < -1) cube.velocity.y = 0.08;
 
     keys.space.pressed = false
 
